--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is the second trail of node js",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "npm run lite",
+    "test": "echo \"Error: no test specified\" && exit 1",
+      "lite": "lite-server"
   },
   "repository": {
     "type": "git",
